<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Enter your settings and hit Play button to listen to that.">

        <ListPreference
            android:defaultValue="@string/pref_lesson_default"
            android:entries="@array/pref_lesson_titles"
            android:entryValues="@array/pref_lesson_values"
            android:key="@string/pref_lesson_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_lesson_title" />

        <ListPreference
            android:defaultValue="@string/pref_freq_default"
            android:entries="@array/pref_freq_titles"
            android:entryValues="@array/pref_freq_values"
            android:key="@string/pref_freq_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_freq_title" />

        <EditTextPreference
            android:capitalize="characters"
            android:summary="@string/pref_wpm_default"
            android:defaultValue="@string/pref_wpm_default"
            android:inputType="numberDecimal"
            android:key="@string/pref_wpm_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_wpm_title" />

        <EditTextPreference
            android:capitalize="characters"
            android:defaultValue="@string/pref_call_default"
            android:inputType="textCapCharacters"
            android:key="@string/pref_call_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_call_title" />

        <ListPreference
            android:defaultValue="@string/pref_ratio_default"
            android:entries="@array/pref_ratio_titles"
            android:entryValues="@array/pref_ratio_values"
            android:key="@string/pref_ratio_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_ratio_title" />

        <EditTextPreference
            android:capitalize="characters"
            android:summary="@string/pref_pause_default"
            android:defaultValue="@string/pref_pause_default"
            android:inputType="numberDecimal"
            android:key="@string/pref_pause_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_pause_title" />

    </PreferenceCategory>
</PreferenceScreen>
